powerpc/smp: Remap boot CPU onto core 0 if >= nr_cpu_ids (bsc#1218180 ltc#204476).

--- a/series.conf
+++ b/series.conf
@@ -16699,6 +16699,7 @@
 	patches.suse/powerpc-smp-Increase-nr_cpu_ids-to-include-the-boot-.patch
 	patches.suse/powerpc-smp-Lookup-avail-once-per-device-tree-node.patch
 	patches.suse/powerpc-smp-Factor-out-assign_threads.patch
+	patches.suse/powerpc-smp-Remap-boot-CPU-onto-core-0-if-nr_cpu_ids.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
