--- a/series.conf
+++ b/series.conf
@@ -16697,6 +16697,7 @@
 	# powerpc/linux next
 	patches.suse/powerpc-smp-Adjust-nr_cpu_ids-to-cover-all-threads-o.patch
 	patches.suse/powerpc-smp-Increase-nr_cpu_ids-to-include-the-boot-.patch
+	patches.suse/powerpc-smp-Lookup-avail-once-per-device-tree-node.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
