powerpc/smp: Adjust nr_cpu_ids to cover all threads of a core (bsc#1218180 ltc#204476).

--- a/series.conf
+++ b/series.conf
@@ -16694,6 +16694,9 @@
 	# powerpc/linux fixes
 	patches.suse/powerpc-pseries-papr-sysparm-use-u8-arrays-for-paylo.patch
 
+	# powerpc/linux next
+	patches.suse/powerpc-smp-Adjust-nr_cpu_ids-to-cover-all-threads-o.patch
+
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
 	patches.suse/x86-mm-Fix-memory-encryption-features-advertisement
