drm/nouveau/kms/nv50-: create heads after outps/conns (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13157,6 +13157,7 @@
 	patches.suse/0147-drm-nouveau-disp-move-outp-init-fini-paths-to-chipse.patch
 	patches.suse/0148-drm-nouveau-disp-nv50-skip-DCB_OUTPUT_TV.patch
 	patches.suse/0149-drm-nouveau-kms-nv50-create-heads-based-on-nvkm-head.patch
+	patches.suse/0150-drm-nouveau-kms-nv50-create-heads-after-outps-conns.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
