--- a/series.conf
+++ b/series.conf
@@ -13158,6 +13158,7 @@
 	patches.suse/0148-drm-nouveau-disp-nv50-skip-DCB_OUTPUT_TV.patch
 	patches.suse/0149-drm-nouveau-kms-nv50-create-heads-based-on-nvkm-head.patch
 	patches.suse/0150-drm-nouveau-kms-nv50-create-heads-after-outps-conns.patch
+	patches.suse/0151-drm-nouveau-kms-nv50-name-aux-channels-after-their-c.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
