--- a/series.conf
+++ b/series.conf
@@ -13159,6 +13159,7 @@
 	patches.suse/0149-drm-nouveau-kms-nv50-create-heads-based-on-nvkm-head.patch
 	patches.suse/0150-drm-nouveau-kms-nv50-create-heads-after-outps-conns.patch
 	patches.suse/0151-drm-nouveau-kms-nv50-name-aux-channels-after-their-c.patch
+	patches.suse/0152-drm-nouveau-kms-nv50-create-connectors-based-on-nvkm.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
