--- a/series.conf
+++ b/series.conf
@@ -13163,6 +13163,7 @@
 	patches.suse/0153-drm-nouveau-kms-nv50-create-outputs-based-on-nvkm-in.patch
 	patches.suse/0154-drm-nouveau-kms-nv50-disable-dcb-parsing.patch
 	patches.suse/0155-drm-bridge-analogix-anx78xx-Add-missing-definition.patch
+	patches.suse/0156-drm-tegra-rgb-Parameterize-V-and-H-sync-polarities.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
