drm/bridge: tc358768: Default to positive h/v syncs (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13165,6 +13165,7 @@
 	patches.suse/0155-drm-bridge-analogix-anx78xx-Add-missing-definition.patch
 	patches.suse/0156-drm-tegra-rgb-Parameterize-V-and-H-sync-polarities.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
+	patches.suse/0158-drm-bridge-tc358768-Default-to-positive-h-v-syncs.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
 	patches.suse/drm-bridge-tc358768-Print-logical-values-not-raw-reg.patch
