drm/bridge: tc358768: Attempt to fix DSI horizontal timings (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13174,6 +13174,7 @@
 	patches.suse/drm-bridge-tc358768-Rename-dsibclk-to-hsbyteclk.patch
 	patches.suse/drm-bridge-tc358768-Clean-up-clock-period-code.patch
 	patches.suse/drm-bridge-tc358768-Fix-tc358768_ns_to_cnt.patch
+	patches.suse/0167-drm-bridge-tc358768-Attempt-to-fix-DSI-horizontal-ti.patch
 	patches.suse/drm-Update-file-owner-during-use.patch
 	patches.suse/drm-Call-drm_atomic_helper_shutdown-at-shutdown-remo.patch
 	patches.suse/drm-edid-Fixup-h-vsync_end-instead-of-h-vtotal.patch
