--- a/series.conf
+++ b/series.conf
@@ -13178,6 +13178,7 @@
 	patches.suse/drm-Update-file-owner-during-use.patch
 	patches.suse/0169-drm-bridge-panel-Fix-device-link-for-DRM_BRIDGE_ATTA.patch
 	patches.suse/0170-drm-armada-Call-drm_atomic_helper_shutdown-at-shutdo.patch
+	patches.suse/0171-drm-Call-drm_atomic_helper_shutdown-at-shutdown-time.patch
 	patches.suse/drm-Call-drm_atomic_helper_shutdown-at-shutdown-remo.patch
 	patches.suse/drm-edid-Fixup-h-vsync_end-instead-of-h-vtotal.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
