drm/ssd130x: Call drm_atomic_helper_shutdown() at remove time (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13180,6 +13180,7 @@
 	patches.suse/0170-drm-armada-Call-drm_atomic_helper_shutdown-at-shutdo.patch
 	patches.suse/0171-drm-Call-drm_atomic_helper_shutdown-at-shutdown-time.patch
 	patches.suse/0172-drm-vc4-Call-drm_atomic_helper_shutdown-at-shutdown-.patch
+	patches.suse/0173-drm-ssd130x-Call-drm_atomic_helper_shutdown-at-remov.patch
 	patches.suse/drm-Call-drm_atomic_helper_shutdown-at-shutdown-remo.patch
 	patches.suse/drm-edid-Fixup-h-vsync_end-instead-of-h-vtotal.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
