drm/ssd130x: Drop _helper prefix from struct drm_*_helper_funcs (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13184,6 +13184,7 @@
 	patches.suse/drm-Call-drm_atomic_helper_shutdown-at-shutdown-remo.patch
 	patches.suse/0175-drm-hisilicon-kirin-Call-drm_atomic_helper_shutdown-.patch
 	patches.suse/drm-edid-Fixup-h-vsync_end-instead-of-h-vtotal.patch
+	patches.suse/0177-drm-ssd130x-Drop-_helper-prefix-from-struct-drm_-_he.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
