--- a/series.conf
+++ b/series.conf
@@ -13185,6 +13185,7 @@
 	patches.suse/0175-drm-hisilicon-kirin-Call-drm_atomic_helper_shutdown-.patch
 	patches.suse/drm-edid-Fixup-h-vsync_end-instead-of-h-vtotal.patch
 	patches.suse/0177-drm-ssd130x-Drop-_helper-prefix-from-struct-drm_-_he.patch
+	patches.suse/0178-accel-qaic-Remove-size-field-from-struct-qaic_bo.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
