drm/simpledrm: Add support for multiple "power-domains" (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13186,6 +13186,7 @@
 	patches.suse/drm-edid-Fixup-h-vsync_end-instead-of-h-vtotal.patch
 	patches.suse/0177-drm-ssd130x-Drop-_helper-prefix-from-struct-drm_-_he.patch
 	patches.suse/0178-accel-qaic-Remove-size-field-from-struct-qaic_bo.patch
+	patches.suse/0179-drm-simpledrm-Add-support-for-multiple-power-domains.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
