--- a/series.conf
+++ b/series.conf
@@ -13188,6 +13188,7 @@
 	patches.suse/0178-accel-qaic-Remove-size-field-from-struct-qaic_bo.patch
 	patches.suse/0179-drm-simpledrm-Add-support-for-multiple-power-domains.patch
 	patches.suse/0180-drm-bridge-Add-200ms-delay-to-wait-FW-HPD-status-sta.patch
+	patches.suse/0181-drm-imx-dcss-Call-drm_atomic_helper_shutdown-at-shut.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
