--- a/series.conf
+++ b/series.conf
@@ -13192,6 +13192,7 @@
 	patches.suse/0182-drm-gpuvm-rename-struct-drm_gpuva_manager-to-struct-.patch
 	patches.suse/0183-drm-gpuvm-allow-building-as-module.patch
 	patches.suse/0184-drm-nouveau-uvmm-rename-umgr-to-base.patch
+	patches.suse/0185-drm-gma500-refactor-deprecated-strncpy.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
