drm/gpuvm: doc: fix filename references (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13193,6 +13193,7 @@
 	patches.suse/0183-drm-gpuvm-allow-building-as-module.patch
 	patches.suse/0184-drm-nouveau-uvmm-rename-umgr-to-base.patch
 	patches.suse/0185-drm-gma500-refactor-deprecated-strncpy.patch
+	patches.suse/0186-drm-gpuvm-doc-fix-filename-references.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
