--- a/series.conf
+++ b/series.conf
@@ -13195,6 +13195,7 @@
 	patches.suse/0185-drm-gma500-refactor-deprecated-strncpy.patch
 	patches.suse/0186-drm-gpuvm-doc-fix-filename-references.patch
 	patches.suse/0187-drm-nouveau-kms-nv50-hide-unused-variables.patch
+	patches.suse/0188-drm-bridge-use-drm_bridge_get_edid-instead-of-using-.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
