--- a/series.conf
+++ b/series.conf
@@ -13196,6 +13196,7 @@
 	patches.suse/0186-drm-gpuvm-doc-fix-filename-references.patch
 	patches.suse/0187-drm-nouveau-kms-nv50-hide-unused-variables.patch
 	patches.suse/0188-drm-bridge-use-drm_bridge_get_edid-instead-of-using-.patch
+	patches.suse/0189-drm-bridge-lt9611uxc-use-drm_bridge_get_edid-instead.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
