drm/bridge: adv7511: Convert to use maple tree register cache (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13199,6 +13199,7 @@
 	patches.suse/0189-drm-bridge-lt9611uxc-use-drm_bridge_get_edid-instead.patch
 	patches.suse/0190-drm-tests-Add-calls-to-drm_fb_blit-on-supported-form.patch
 	patches.suse/0191-drm-tests-Add-new-format-conversion-tests-to-better-.patch
+	patches.suse/0192-drm-bridge-adv7511-Convert-to-use-maple-tree-registe.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
