--- a/series.conf
+++ b/series.conf
@@ -13200,6 +13200,7 @@
 	patches.suse/0190-drm-tests-Add-calls-to-drm_fb_blit-on-supported-form.patch
 	patches.suse/0191-drm-tests-Add-new-format-conversion-tests-to-better-.patch
 	patches.suse/0192-drm-bridge-adv7511-Convert-to-use-maple-tree-registe.patch
+	patches.suse/0193-drm-bridge-dpc3433-Convert-to-use-maple-tree-registe.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
