drm/bridge: sn65dsi83: Convert to use maple tree register cache (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13204,6 +13204,7 @@
 	patches.suse/0194-drm-bridge-tc358767-Convert-to-use-maple-tree-regist.patch
 	patches.suse/0195-drm-bridge-icn6211-Convert-to-use-maple-tree-registe.patch
 	patches.suse/0196-drm-bridge-lt9211-Convert-to-use-maple-tree-register.patch
+	patches.suse/0197-drm-bridge-sn65dsi83-Convert-to-use-maple-tree-regis.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
