--- a/series.conf
+++ b/series.conf
@@ -13209,6 +13209,7 @@
 	patches.suse/0199-drm-panel-ili9322-Convert-to-use-maple-tree-register.patch
 	patches.suse/0200-drm-panel-Add-driver-for-BOE-RM692E5-AMOLED-panel.patch
 	patches.suse/0201-drm-doc-Document-DRM-device-reset-expectations.patch
+	patches.suse/0202-drm-vblank-Warn-when-silently-cancelling-vblank-work.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
