- drm/panfrost: Add fdinfo support GPU load metrics (jsc#PED-3527   jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120   jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069   jsc#PED-6071). - Refresh   patches.suse/drm-panfrost-Ignore-core_mask-for-poweroff-and-disab.patch. - Refresh   patches.suse/drm-panfrost-Really-power-off-GPU-cores-in-panfrost_.patch.

--- a/series.conf
+++ b/series.conf
@@ -13211,6 +13211,7 @@
 	patches.suse/0201-drm-doc-Document-DRM-device-reset-expectations.patch
 	patches.suse/0202-drm-vblank-Warn-when-silently-cancelling-vblank-work.patch
 	patches.suse/0203-drm-panfrost-Add-cycle-count-GPU-register-definition.patch
+	patches.suse/0204-drm-panfrost-Add-fdinfo-support-GPU-load-metrics.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
