--- a/series.conf
+++ b/series.conf
@@ -13212,6 +13212,7 @@
 	patches.suse/0202-drm-vblank-Warn-when-silently-cancelling-vblank-work.patch
 	patches.suse/0203-drm-panfrost-Add-cycle-count-GPU-register-definition.patch
 	patches.suse/0204-drm-panfrost-Add-fdinfo-support-GPU-load-metrics.patch
+	patches.suse/0205-drm-panfrost-Add-fdinfo-support-for-memory-stats.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
