drm/drm_file: Add DRM obj's RSS reporting function for fdinfo (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13213,6 +13213,7 @@
 	patches.suse/0203-drm-panfrost-Add-cycle-count-GPU-register-definition.patch
 	patches.suse/0204-drm-panfrost-Add-fdinfo-support-GPU-load-metrics.patch
 	patches.suse/0205-drm-panfrost-Add-fdinfo-support-for-memory-stats.patch
+	patches.suse/0206-drm-drm_file-Add-DRM-obj-s-RSS-reporting-function-fo.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
