--- a/series.conf
+++ b/series.conf
@@ -13214,6 +13214,7 @@
 	patches.suse/0204-drm-panfrost-Add-fdinfo-support-GPU-load-metrics.patch
 	patches.suse/0205-drm-panfrost-Add-fdinfo-support-for-memory-stats.patch
 	patches.suse/0206-drm-drm_file-Add-DRM-obj-s-RSS-reporting-function-fo.patch
+	patches.suse/0207-drm-panfrost-Implement-generic-DRM-object-RSS-report.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
