--- a/series.conf
+++ b/series.conf
@@ -13216,6 +13216,7 @@
 	patches.suse/0206-drm-drm_file-Add-DRM-obj-s-RSS-reporting-function-fo.patch
 	patches.suse/0207-drm-panfrost-Implement-generic-DRM-object-RSS-report.patch
 	patches.suse/0208-drm-amd-pm-Annotate-struct-smu10_voltage_dependency_.patch
+	patches.suse/0209-drm-amdgpu-discovery-Annotate-struct-ip_hw_instance-.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
