drm/i915/selftests: Annotate struct perf_series with __counted_by (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13217,6 +13217,7 @@
 	patches.suse/0207-drm-panfrost-Implement-generic-DRM-object-RSS-report.patch
 	patches.suse/0208-drm-amd-pm-Annotate-struct-smu10_voltage_dependency_.patch
 	patches.suse/0209-drm-amdgpu-discovery-Annotate-struct-ip_hw_instance-.patch
+	patches.suse/0210-drm-i915-selftests-Annotate-struct-perf_series-with-.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
