--- a/series.conf
+++ b/series.conf
@@ -13218,6 +13218,7 @@
 	patches.suse/0208-drm-amd-pm-Annotate-struct-smu10_voltage_dependency_.patch
 	patches.suse/0209-drm-amdgpu-discovery-Annotate-struct-ip_hw_instance-.patch
 	patches.suse/0210-drm-i915-selftests-Annotate-struct-perf_series-with-.patch
+	patches.suse/0211-drm-msm-dpu-Annotate-struct-dpu_hw_intr-with-__count.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
