--- a/series.conf
+++ b/series.conf
@@ -13220,6 +13220,7 @@
 	patches.suse/0210-drm-i915-selftests-Annotate-struct-perf_series-with-.patch
 	patches.suse/0211-drm-msm-dpu-Annotate-struct-dpu_hw_intr-with-__count.patch
 	patches.suse/0212-drm-nouveau-pm-Annotate-struct-nvkm_perfdom-with-__c.patch
+	patches.suse/0213-drm-vc4-Annotate-struct-vc4_perfmon-with-__counted_b.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
