--- a/series.conf
+++ b/series.conf
@@ -13223,6 +13223,7 @@
 	patches.suse/0213-drm-vc4-Annotate-struct-vc4_perfmon-with-__counted_b.patch
 	patches.suse/0214-drm-virtio-Annotate-struct-virtio_gpu_object_array-w.patch
 	patches.suse/0215-drm-vmwgfx-Annotate-struct-vmw_surface_dirty-with-__.patch
+	patches.suse/0216-drm-v3d-Annotate-struct-v3d_perfmon-with-__counted_b.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
