drm/dp: switch drm_dp_downstream_*() helpers to struct drm_edid (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13224,6 +13224,7 @@
 	patches.suse/0214-drm-virtio-Annotate-struct-virtio_gpu_object_array-w.patch
 	patches.suse/0215-drm-vmwgfx-Annotate-struct-vmw_surface_dirty-with-__.patch
 	patches.suse/0216-drm-v3d-Annotate-struct-v3d_perfmon-with-__counted_b.patch
+	patches.suse/0217-drm-dp-switch-drm_dp_downstream_-helpers-to-struct-d.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
