--- a/series.conf
+++ b/series.conf
@@ -13225,6 +13225,7 @@
 	patches.suse/0215-drm-vmwgfx-Annotate-struct-vmw_surface_dirty-with-__.patch
 	patches.suse/0216-drm-v3d-Annotate-struct-v3d_perfmon-with-__counted_b.patch
 	patches.suse/0217-drm-dp-switch-drm_dp_downstream_-helpers-to-struct-d.patch
+	patches.suse/0218-drm-panel-nv3051d-Add-Support-for-Anbernic-351V.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
