--- a/series.conf
+++ b/series.conf
@@ -13227,6 +13227,7 @@
 	patches.suse/0217-drm-dp-switch-drm_dp_downstream_-helpers-to-struct-d.patch
 	patches.suse/0218-drm-panel-nv3051d-Add-Support-for-Anbernic-351V.patch
 	patches.suse/0219-drm-amd-display-Fix-mst-hub-unplug-warning.patch
+	patches.suse/0220-drm-exynos-dsi-Convert-to-platform-remove-callback-r.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
