drm/bridge: samsung-dsim: add more mipi-dsi device debug information (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13228,6 +13228,7 @@
 	patches.suse/0218-drm-panel-nv3051d-Add-Support-for-Anbernic-351V.patch
 	patches.suse/0219-drm-amd-display-Fix-mst-hub-unplug-warning.patch
 	patches.suse/0220-drm-exynos-dsi-Convert-to-platform-remove-callback-r.patch
+	patches.suse/0221-drm-bridge-samsung-dsim-add-more-mipi-dsi-device-deb.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
