--- a/series.conf
+++ b/series.conf
@@ -13230,6 +13230,7 @@
 	patches.suse/0220-drm-exynos-dsi-Convert-to-platform-remove-callback-r.patch
 	patches.suse/0221-drm-bridge-samsung-dsim-add-more-mipi-dsi-device-deb.patch
 	patches.suse/0222-drm-bridge-samsung-dsim-reread-ref-clock-before-conf.patch
+	patches.suse/0223-drm-bridge-samsung-dsim-update-PLL-reference-clock.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
