--- a/series.conf
+++ b/series.conf
@@ -13233,6 +13233,7 @@
 	patches.suse/0223-drm-bridge-samsung-dsim-update-PLL-reference-clock.patch
 	patches.suse/0224-drm-bridge-samsung-dsim-adjust-porches-by-rounding-u.patch
 	patches.suse/0225-drm-bridge-samsung-dsim-calculate-porches-in-Hz.patch
+	patches.suse/0226-drm-panel-simple-allow-LVDS-format-override.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
