Documentation/gpu: fix Panfrost documentation build warnings (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13234,6 +13234,7 @@
 	patches.suse/0224-drm-bridge-samsung-dsim-adjust-porches-by-rounding-u.patch
 	patches.suse/0225-drm-bridge-samsung-dsim-calculate-porches-in-Hz.patch
 	patches.suse/0226-drm-panel-simple-allow-LVDS-format-override.patch
+	patches.suse/0227-Documentation-gpu-fix-Panfrost-documentation-build-w.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
