--- a/series.conf
+++ b/series.conf
@@ -13235,6 +13235,7 @@
 	patches.suse/0225-drm-bridge-samsung-dsim-calculate-porches-in-Hz.patch
 	patches.suse/0226-drm-panel-simple-allow-LVDS-format-override.patch
 	patches.suse/0227-Documentation-gpu-fix-Panfrost-documentation-build-w.patch
+	patches.suse/0228-drm-rockchip-vop2-Demote-message-in-mod_supported-to.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
