drm/rockchip: remove redundant of_match_ptr (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13238,6 +13238,7 @@
 	patches.suse/0228-drm-rockchip-vop2-Demote-message-in-mod_supported-to.patch
 	patches.suse/0229-drm-rockchip-vop2-Convert-to-use-maple-tree-register.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
+	patches.suse/0231-drm-rockchip-remove-redundant-of_match_ptr.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-GT-workarounds.patch
