--- a/series.conf
+++ b/series.conf
@@ -13239,6 +13239,7 @@
 	patches.suse/0229-drm-rockchip-vop2-Convert-to-use-maple-tree-register.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/0231-drm-rockchip-remove-redundant-of_match_ptr.patch
+	patches.suse/0232-drm-rockchip-dsi-Use-devm_platform_get_and_ioremap_r.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-GT-workarounds.patch
