--- a/series.conf
+++ b/series.conf
@@ -13242,6 +13242,7 @@
 	patches.suse/0232-drm-rockchip-dsi-Use-devm_platform_get_and_ioremap_r.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
+	patches.suse/0235-drm-panel-ltk050h3146w-add-mipi_dsi_device.mode_flag.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-GT-workarounds.patch
 	patches.suse/drm-i915-Tidy-workaround-definitions.patch
 	patches.suse/drm-i915-dg2-Drop-Wa_16011777198.patch
