--- a/series.conf
+++ b/series.conf
@@ -13243,6 +13243,7 @@
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
 	patches.suse/0235-drm-panel-ltk050h3146w-add-mipi_dsi_device.mode_flag.patch
+	patches.suse/0236-drm-panel-ltk050h3146w-add-support-for-Leadtek-LTK05.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-GT-workarounds.patch
 	patches.suse/drm-i915-Tidy-workaround-definitions.patch
 	patches.suse/drm-i915-dg2-Drop-Wa_16011777198.patch
