--- a/series.conf
+++ b/series.conf
@@ -13245,6 +13245,7 @@
 	patches.suse/0235-drm-panel-ltk050h3146w-add-mipi_dsi_device.mode_flag.patch
 	patches.suse/0236-drm-panel-ltk050h3146w-add-support-for-Leadtek-LTK05.patch
 	patches.suse/0237-drm-i915-dg2-Remove-Wa_15010599737.patch
+	patches.suse/0238-drm-i915-selftests-Align-igt_spinner_create_request-.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-GT-workarounds.patch
 	patches.suse/drm-i915-Tidy-workaround-definitions.patch
 	patches.suse/drm-i915-dg2-Drop-Wa_16011777198.patch
