drm/i915/guc: Force a reset on internal GuC error (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13256,6 +13256,7 @@
 	patches.suse/drm-i915-Eliminate-IS_MTL_MEDIA_STEP.patch
 	patches.suse/drm-i915-mtl-Eliminate-subplatforms.patch
 	patches.suse/drm-i915-Replace-several-IS_METEORLAKE-with-proper-I.patch
+	patches.suse/0249-drm-i915-guc-Force-a-reset-on-internal-GuC-error.patch
 	patches.suse/drm-i915-mtl-Update-workaround-14016712196.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
