--- a/series.conf
+++ b/series.conf
@@ -13258,6 +13258,7 @@
 	patches.suse/drm-i915-Replace-several-IS_METEORLAKE-with-proper-I.patch
 	patches.suse/0249-drm-i915-guc-Force-a-reset-on-internal-GuC-error.patch
 	patches.suse/0250-drm-i915-mtl-Adding-DeviceID-for-Arrowlake-S-under-M.patch
+	patches.suse/0251-drm-i915-gsc-define-gsc-fw.patch
 	patches.suse/drm-i915-mtl-Update-workaround-14016712196.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
