--- a/series.conf
+++ b/series.conf
@@ -13260,6 +13260,7 @@
 	patches.suse/0250-drm-i915-mtl-Adding-DeviceID-for-Arrowlake-S-under-M.patch
 	patches.suse/0251-drm-i915-gsc-define-gsc-fw.patch
 	patches.suse/drm-i915-mtl-Update-workaround-14016712196.patch
+	patches.suse/0253-drm-i915-gt-Wait-longer-for-tasks-in-migrate-selftes.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
