drm/i915/mtl: Drop Wa_14017240301 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13262,6 +13262,7 @@
 	patches.suse/drm-i915-mtl-Update-workaround-14016712196.patch
 	patches.suse/0253-drm-i915-gt-Wait-longer-for-tasks-in-migrate-selftes.patch
 	patches.suse/0254-drm-i915-Add-Wa_14015150844.patch
+	patches.suse/0255-drm-i915-mtl-Drop-Wa_14017240301.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
