drm/i915/gt: skip WA verification for GEN7_MISCCPCTL on DG2 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13264,6 +13264,7 @@
 	patches.suse/0254-drm-i915-Add-Wa_14015150844.patch
 	patches.suse/0255-drm-i915-mtl-Drop-Wa_14017240301.patch
 	patches.suse/0256-drm-i915-Run-relevant-bits-of-debugfs-drop_caches-pe.patch
+	patches.suse/0257-drm-i915-gt-skip-WA-verification-for-GEN7_MISCCPCTL-.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
