drm/i915/huc: silence injected failure in the load via GSC path (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13266,6 +13266,7 @@
 	patches.suse/0256-drm-i915-Run-relevant-bits-of-debugfs-drop_caches-pe.patch
 	patches.suse/0257-drm-i915-gt-skip-WA-verification-for-GEN7_MISCCPCTL-.patch
 	patches.suse/0258-drm-i915-Add-Wa_18022495364.patch
+	patches.suse/0259-drm-i915-huc-silence-injected-failure-in-the-load-vi.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
