--- a/series.conf
+++ b/series.conf
@@ -13268,6 +13268,7 @@
 	patches.suse/0258-drm-i915-Add-Wa_18022495364.patch
 	patches.suse/0259-drm-i915-huc-silence-injected-failure-in-the-load-vi.patch
 	patches.suse/0260-drm-i915-pxp-mtl-Update-pxp-firmware-response-timeou.patch
+	patches.suse/0261-drm-i915-pxp-mtl-Update-pxp-firmware-packet-size.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
