drm/i915/lrc: User PXP contexts requires runalone bit in lrc (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13269,6 +13269,7 @@
 	patches.suse/0259-drm-i915-huc-silence-injected-failure-in-the-load-vi.patch
 	patches.suse/0260-drm-i915-pxp-mtl-Update-pxp-firmware-response-timeou.patch
 	patches.suse/0261-drm-i915-pxp-mtl-Update-pxp-firmware-packet-size.patch
+	patches.suse/0262-drm-i915-lrc-User-PXP-contexts-requires-runalone-bit.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
