--- a/series.conf
+++ b/series.conf
@@ -13270,6 +13270,7 @@
 	patches.suse/0260-drm-i915-pxp-mtl-Update-pxp-firmware-response-timeou.patch
 	patches.suse/0261-drm-i915-pxp-mtl-Update-pxp-firmware-packet-size.patch
 	patches.suse/0262-drm-i915-lrc-User-PXP-contexts-requires-runalone-bit.patch
+	patches.suse/0263-drm-i915-refactor-deprecated-strncpy.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
