--- a/series.conf
+++ b/series.conf
@@ -13271,6 +13271,7 @@
 	patches.suse/0261-drm-i915-pxp-mtl-Update-pxp-firmware-packet-size.patch
 	patches.suse/0262-drm-i915-lrc-User-PXP-contexts-requires-runalone-bit.patch
 	patches.suse/0263-drm-i915-refactor-deprecated-strncpy.patch
+	patches.suse/0264-drm-i915-gt-Update-RC6-mask-for-mtl_drpc.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
