drm/i915: Add Wa_18028616096 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13274,6 +13274,7 @@
 	patches.suse/0264-drm-i915-gt-Update-RC6-mask-for-mtl_drpc.patch
 	patches.suse/0265-drm-i915-gt-remove-a-static-inline-that-requires-inc.patch
 	patches.suse/0266-drm-i915-gem-remove-inlines-from-i915_gem_execbuffer.patch
+	patches.suse/0267-drm-i915-Add-Wa_18028616096.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
