--- a/series.conf
+++ b/series.conf
@@ -13275,6 +13275,7 @@
 	patches.suse/0265-drm-i915-gt-remove-a-static-inline-that-requires-inc.patch
 	patches.suse/0266-drm-i915-gem-remove-inlines-from-i915_gem_execbuffer.patch
 	patches.suse/0267-drm-i915-Add-Wa_18028616096.patch
+	patches.suse/0268-drm-i915-perf-Remove-gtt_offset-from-stream-oa_buffe.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
