drm/i915: Do not disable preemption for resets (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13276,6 +13276,7 @@
 	patches.suse/0266-drm-i915-gem-remove-inlines-from-i915_gem_execbuffer.patch
 	patches.suse/0267-drm-i915-Add-Wa_18028616096.patch
 	patches.suse/0268-drm-i915-perf-Remove-gtt_offset-from-stream-oa_buffe.patch
+	patches.suse/0269-drm-i915-Do-not-disable-preemption-for-resets.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
