--- a/series.conf
+++ b/series.conf
@@ -13279,6 +13279,7 @@
 	patches.suse/0269-drm-i915-Do-not-disable-preemption-for-resets.patch
 	patches.suse/0270-drm-i915-Avoid-endless-HPD-poll-detect-loop-via-runt.patch
 	patches.suse/0271-drm-i915-Don-t-change-the-status-of-forced-connector.patch
+	patches.suse/0272-drm-i915-Don-t-change-the-status-of-forced-connector.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
