--- a/series.conf
+++ b/series.conf
@@ -13281,6 +13281,7 @@
 	patches.suse/0271-drm-i915-Don-t-change-the-status-of-forced-connector.patch
 	patches.suse/0272-drm-i915-Don-t-change-the-status-of-forced-connector.patch
 	patches.suse/0273-drm-i915-vdsc-Fix-first_line_bpg_offset-calculation.patch
+	patches.suse/0274-drm-i915-dp-Fix-LT-debug-print-in-SDP-CRC-enable.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
