drm/i915/pxp: Optimize GET_PARAM:PXP_STATUS (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13283,6 +13283,7 @@
 	patches.suse/0273-drm-i915-vdsc-Fix-first_line_bpg_offset-calculation.patch
 	patches.suse/0274-drm-i915-dp-Fix-LT-debug-print-in-SDP-CRC-enable.patch
 	patches.suse/0275-drm-i915-pxp-mtl-intel_pxp_init_hw-needs-runtime-pm-.patch
+	patches.suse/0276-drm-i915-pxp-Optimize-GET_PARAM-PXP_STATUS.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
