--- a/series.conf
+++ b/series.conf
@@ -13285,6 +13285,7 @@
 	patches.suse/0275-drm-i915-pxp-mtl-intel_pxp_init_hw-needs-runtime-pm-.patch
 	patches.suse/0276-drm-i915-pxp-Optimize-GET_PARAM-PXP_STATUS.patch
 	patches.suse/0277-drm-i915-display-Remove-unused-POWER_DOMAIN_MASK.patch
+	patches.suse/0278-drm-i915-cx0-Add-intel_cx0_get_owned_lane_mask.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
