drm/i915: Simplify intel_cx0_program_phy_lane() with loop (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13286,6 +13286,7 @@
 	patches.suse/0276-drm-i915-pxp-Optimize-GET_PARAM-PXP_STATUS.patch
 	patches.suse/0277-drm-i915-display-Remove-unused-POWER_DOMAIN_MASK.patch
 	patches.suse/0278-drm-i915-cx0-Add-intel_cx0_get_owned_lane_mask.patch
+	patches.suse/0279-drm-i915-Simplify-intel_cx0_program_phy_lane-with-lo.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
