--- a/series.conf
+++ b/series.conf
@@ -13287,6 +13287,7 @@
 	patches.suse/0277-drm-i915-display-Remove-unused-POWER_DOMAIN_MASK.patch
 	patches.suse/0278-drm-i915-cx0-Add-intel_cx0_get_owned_lane_mask.patch
 	patches.suse/0279-drm-i915-Simplify-intel_cx0_program_phy_lane-with-lo.patch
+	patches.suse/0280-drm-i915-cx0-Enable-disable-TX-only-for-owned-PHY-la.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
