--- a/series.conf
+++ b/series.conf
@@ -13291,6 +13291,7 @@
 	patches.suse/0281-drm-i915-cx0-Program-vswing-only-for-owned-lanes.patch
 	patches.suse/drm-i915-dg2-Recognize-pre-production-hardware.patch
 	patches.suse/drm-i915-dg2-Drop-pre-production-display-workarounds.patch
+	patches.suse/0284-drm-i915-selftest-Simplify-Y-major-tiling-in-blit-se.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
 	patches.suse/drm-i915-display-Eliminate-IS_METEORLAKE-checks.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
