--- a/series.conf
+++ b/series.conf
@@ -13294,6 +13294,7 @@
 	patches.suse/0284-drm-i915-selftest-Simplify-Y-major-tiling-in-blit-se.patch
 	patches.suse/0285-drm-i915-Eliminate-has_4tile-feature-flag.patch
 	patches.suse/0286-drm-i915-dp-Consider-output_format-while-computing-d.patch
+	patches.suse/0287-drm-i915-dp-Move-compressed-bpp-check-with-420-forma.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
 	patches.suse/drm-i915-display-Eliminate-IS_METEORLAKE-checks.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
