--- a/series.conf
+++ b/series.conf
@@ -13297,6 +13297,7 @@
 	patches.suse/0287-drm-i915-dp-Move-compressed-bpp-check-with-420-forma.patch
 	patches.suse/0288-drm-i915-dp_mst-Use-output_format-to-get-the-final-l.patch
 	patches.suse/0289-drm-i915-dp-Use-consistent-name-for-link-bpp-and-com.patch
+	patches.suse/0290-drm-i915-dp-Update-Bigjoiner-interface-bits-for-comp.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
 	patches.suse/drm-i915-display-Eliminate-IS_METEORLAKE-checks.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
