drm/i915/dp: Remove extra logs for printing DSC info (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13299,6 +13299,7 @@
 	patches.suse/0289-drm-i915-dp-Use-consistent-name-for-link-bpp-and-com.patch
 	patches.suse/0290-drm-i915-dp-Update-Bigjoiner-interface-bits-for-comp.patch
 	patches.suse/0291-drm-i915-intel_cdclk-Add-vdsc-with-bigjoiner-constra.patch
+	patches.suse/0292-drm-i915-dp-Remove-extra-logs-for-printing-DSC-info.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
 	patches.suse/drm-i915-display-Eliminate-IS_METEORLAKE-checks.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
