--- a/series.conf
+++ b/series.conf
@@ -13300,6 +13300,7 @@
 	patches.suse/0290-drm-i915-dp-Update-Bigjoiner-interface-bits-for-comp.patch
 	patches.suse/0291-drm-i915-intel_cdclk-Add-vdsc-with-bigjoiner-constra.patch
 	patches.suse/0292-drm-i915-dp-Remove-extra-logs-for-printing-DSC-info.patch
+	patches.suse/0293-drm-i915-dp-Avoid-forcing-DSC-BPC-for-MST-case.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
 	patches.suse/drm-i915-display-Eliminate-IS_METEORLAKE-checks.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
