--- a/series.conf
+++ b/series.conf
@@ -13302,6 +13302,7 @@
 	patches.suse/0292-drm-i915-dp-Remove-extra-logs-for-printing-DSC-info.patch
 	patches.suse/0293-drm-i915-dp-Avoid-forcing-DSC-BPC-for-MST-case.patch
 	patches.suse/0294-drm-i915-dp-Add-functions-to-get-min-max-src-input-b.patch
+	patches.suse/0295-drm-i915-dp-Check-min-bpc-DSC-limits-for-dsc_force_b.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
 	patches.suse/drm-i915-display-Eliminate-IS_METEORLAKE-checks.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
