drm/i915/dp: Avoid left shift of DSC output bpp by 4 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13303,6 +13303,7 @@
 	patches.suse/0293-drm-i915-dp-Avoid-forcing-DSC-BPC-for-MST-case.patch
 	patches.suse/0294-drm-i915-dp-Add-functions-to-get-min-max-src-input-b.patch
 	patches.suse/0295-drm-i915-dp-Check-min-bpc-DSC-limits-for-dsc_force_b.patch
+	patches.suse/0296-drm-i915-dp-Avoid-left-shift-of-DSC-output-bpp-by-4.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
 	patches.suse/drm-i915-display-Eliminate-IS_METEORLAKE-checks.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
