--- a/series.conf
+++ b/series.conf
@@ -13304,6 +13304,7 @@
 	patches.suse/0294-drm-i915-dp-Add-functions-to-get-min-max-src-input-b.patch
 	patches.suse/0295-drm-i915-dp-Check-min-bpc-DSC-limits-for-dsc_force_b.patch
 	patches.suse/0296-drm-i915-dp-Avoid-left-shift-of-DSC-output-bpp-by-4.patch
+	patches.suse/0297-drm-i915-dp-Rename-helper-to-get-DSC-max-pipe_bpp.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
 	patches.suse/drm-i915-display-Eliminate-IS_METEORLAKE-checks.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
