--- a/series.conf
+++ b/series.conf
@@ -13305,6 +13305,7 @@
 	patches.suse/0295-drm-i915-dp-Check-min-bpc-DSC-limits-for-dsc_force_b.patch
 	patches.suse/0296-drm-i915-dp-Avoid-left-shift-of-DSC-output-bpp-by-4.patch
 	patches.suse/0297-drm-i915-dp-Rename-helper-to-get-DSC-max-pipe_bpp.patch
+	patches.suse/0298-drm-i915-dp-Separate-out-functions-for-edp-DP-for-co.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
 	patches.suse/drm-i915-display-Eliminate-IS_METEORLAKE-checks.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
