--- a/series.conf
+++ b/series.conf
@@ -13307,6 +13307,7 @@
 	patches.suse/0297-drm-i915-dp-Rename-helper-to-get-DSC-max-pipe_bpp.patch
 	patches.suse/0298-drm-i915-dp-Separate-out-functions-for-edp-DP-for-co.patch
 	patches.suse/0299-drm-i915-dp-Add-DSC-BPC-BPP-constraints-while-select.patch
+	patches.suse/0300-drm-i915-dp-Separate-out-function-to-get-compressed-.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
 	patches.suse/drm-i915-display-Eliminate-IS_METEORLAKE-checks.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
