drm/i915/dp: Check if force_dsc_output_format is possible (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13310,6 +13310,7 @@
 	patches.suse/0300-drm-i915-dp-Separate-out-function-to-get-compressed-.patch
 	patches.suse/0301-drm-i915-dp-Get-optimal-link-config-to-have-best-com.patch
 	patches.suse/0302-drm-i915-dp-Check-src-sink-compressed-bpp-limit-for-.patch
+	patches.suse/0303-drm-i915-dp-Check-if-force_dsc_output_format-is-poss.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
 	patches.suse/drm-i915-display-Eliminate-IS_METEORLAKE-checks.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
