--- a/series.conf
+++ b/series.conf
@@ -13314,6 +13314,7 @@
 	patches.suse/0304-drm-i915-display-Remove-unused-POWER_DOMAIN_MODESET.patch
 	patches.suse/drm-i915-Eliminate-IS_MTL_DISPLAY_STEP.patch
 	patches.suse/drm-i915-display-Eliminate-IS_METEORLAKE-checks.patch
+	patches.suse/0307-drm-i915-display-remove-redundant-parameter-from-sdp.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
