--- a/series.conf
+++ b/series.conf
@@ -13317,6 +13317,7 @@
 	patches.suse/0307-drm-i915-display-remove-redundant-parameter-from-sdp.patch
 	patches.suse/0308-drm-i915-display-combine-DP-audio-compute-config-ste.patch
 	patches.suse/0309-drm-i915-display-add-lock-while-printing-frontbuffer.patch
+	patches.suse/0310-drm-i915-sdvo-Issue-SetTargetOutput-prior-to-GetAtta.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
