--- a/series.conf
+++ b/series.conf
@@ -13319,6 +13319,7 @@
 	patches.suse/0309-drm-i915-display-add-lock-while-printing-frontbuffer.patch
 	patches.suse/0310-drm-i915-sdvo-Issue-SetTargetOutput-prior-to-GetAtta.patch
 	patches.suse/0311-drm-i915-sdvo-Protect-macro-args.patch
+	patches.suse/0312-drm-i915-sdvo-s-sdvo_inputs_mask-sdvo_num_inputs.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
