--- a/series.conf
+++ b/series.conf
@@ -13320,6 +13320,7 @@
 	patches.suse/0310-drm-i915-sdvo-Issue-SetTargetOutput-prior-to-GetAtta.patch
 	patches.suse/0311-drm-i915-sdvo-Protect-macro-args.patch
 	patches.suse/0312-drm-i915-sdvo-s-sdvo_inputs_mask-sdvo_num_inputs.patch
+	patches.suse/0313-drm-i915-Don-t-warn-about-zero-N-P-in-_calc_dpll_par.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
