--- a/series.conf
+++ b/series.conf
@@ -13323,6 +13323,7 @@
 	patches.suse/0313-drm-i915-Don-t-warn-about-zero-N-P-in-_calc_dpll_par.patch
 	patches.suse/0314-drm-i915-Fully-populate-crtc_state-dpll.patch
 	patches.suse/0315-drm-i915-sdvo-Pick-the-TV-dotclock-from-adjusted_mod.patch
+	patches.suse/0316-drm-i915-sdvo-Fail-gracefully-if-the-TV-dotclock-is-.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
