drm/i915/rpl: Update pci ids for RPL P/U (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13324,6 +13324,7 @@
 	patches.suse/0314-drm-i915-Fully-populate-crtc_state-dpll.patch
 	patches.suse/0315-drm-i915-sdvo-Pick-the-TV-dotclock-from-adjusted_mod.patch
 	patches.suse/0316-drm-i915-sdvo-Fail-gracefully-if-the-TV-dotclock-is-.patch
+	patches.suse/0317-drm-i915-rpl-Update-pci-ids-for-RPL-P-U.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
