--- a/series.conf
+++ b/series.conf
@@ -13326,6 +13326,7 @@
 	patches.suse/0316-drm-i915-sdvo-Fail-gracefully-if-the-TV-dotclock-is-.patch
 	patches.suse/0317-drm-i915-rpl-Update-pci-ids-for-RPL-P-U.patch
 	patches.suse/0318-drm-i915-vma-constify-unbind_fence_ops.patch
+	patches.suse/0319-drm-i915-display-update-intel_dp_has_audio-to-suppor.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
