--- a/series.conf
+++ b/series.conf
@@ -13327,6 +13327,7 @@
 	patches.suse/0317-drm-i915-rpl-Update-pci-ids-for-RPL-P-U.patch
 	patches.suse/0318-drm-i915-vma-constify-unbind_fence_ops.patch
 	patches.suse/0319-drm-i915-display-update-intel_dp_has_audio-to-suppor.patch
+	patches.suse/0320-drm-i915-display-configure-SDP-split-for-DP-MST.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
