drm/i915/color: move CHV CGM pipe mode read to intel_color (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13329,6 +13329,7 @@
 	patches.suse/0319-drm-i915-display-update-intel_dp_has_audio-to-suppor.patch
 	patches.suse/0320-drm-i915-display-configure-SDP-split-for-DP-MST.patch
 	patches.suse/0321-drm-i915-regs-split-out-intel_color_regs.h.patch
+	patches.suse/0322-drm-i915-color-move-CHV-CGM-pipe-mode-read-to-intel_.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
