--- a/series.conf
+++ b/series.conf
@@ -13332,6 +13332,7 @@
 	patches.suse/0322-drm-i915-color-move-CHV-CGM-pipe-mode-read-to-intel_.patch
 	patches.suse/0323-drm-i915-move-HSW-gamma-mode-read-to-intel_color.patch
 	patches.suse/0324-drm-i915-move-ILK-CSC-mode-read-to-intel_color.patch
+	patches.suse/0325-drm-i915-color-move-SKL-gamma-and-CSC-enable-read-to.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
