drm/i915/psr: Apply Wa_14015648006 for all display 14 steppings (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13344,6 +13344,7 @@
 	patches.suse/0334-drm-i915-sdvo-Get-rid-of-the-per-connector-i2c-symli.patch
 	patches.suse/0335-drm-i915-sdvo-Rework-DDC-bus-handling.patch
 	patches.suse/0336-drm-i915-sdvo-Print-out-the-i2c-pin-and-slave-addres.patch
+	patches.suse/0337-drm-i915-psr-Apply-Wa_14015648006-for-all-display-14.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
