drm/i915/dp: Drop redundant AUX power get/put in intel_dp_force() (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13348,6 +13348,7 @@
 	patches.suse/0338-drm-display-dp-Assume-8-bpc-support-when-DSC-is-supp.patch
 	patches.suse/0339-drivers-drm-i915-Honor-limits-max_bpp-while-computin.patch
 	patches.suse/0340-drm-i915-dg2-Add-support-for-new-DG2-G12-revid-0x1.patch
+	patches.suse/0341-drm-i915-dp-Drop-redundant-AUX-power-get-put-in-inte.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
