drm/i915/cec: switch to setting physical address directly (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13357,6 +13357,7 @@
 	patches.suse/0347-drm-i915-display-use-drm_edid_is_digital.patch
 	patches.suse/0348-drm-edid-parse-source-physical-address.patch
 	patches.suse/0349-drm-cec-add-drm_dp_cec_attach-as-the-non-edid-versio.patch
+	patches.suse/0350-drm-i915-cec-switch-to-setting-physical-address-dire.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
