drm/i915: Handle dma fences in dirtyfb callback (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13361,6 +13361,7 @@
 	patches.suse/0351-drm-i915-fbc-Clear-frontbuffer-busy-bits-on-flip.patch
 	patches.suse/0352-drm-i915-psr-Clear-frontbuffer-busy-bits-on-flip.patch
 	patches.suse/0353-drm-i915-Add-new-frontbuffer-tracking-interface-to-q.patch
+	patches.suse/0354-drm-i915-Handle-dma-fences-in-dirtyfb-callback.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
