drm/i915/vdsc: Add function to write in PPS register (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13366,6 +13366,7 @@
 	patches.suse/0356-drm-i915-vdsc-Add-a-check-for-dsc-split-cases.patch
 	patches.suse/0357-drm-i915-vdsc-Add-func-to-get-no.-of-vdsc-instances-.patch
 	patches.suse/0358-drm-i915-vdsc-Add-function-to-read-any-PPS-register.patch
+	patches.suse/0359-drm-i915-vdsc-Add-function-to-write-in-PPS-register.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
