drm/i915/display: Compare the readout dsc pps params (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13369,6 +13369,7 @@
 	patches.suse/0359-drm-i915-vdsc-Add-function-to-write-in-PPS-register.patch
 	patches.suse/0360-drm-i915-vdsc-Remove-unused-dsc-registers.patch
 	patches.suse/0361-drm-i915-vdsc-Fill-the-intel_dsc_get_pps_config-func.patch
+	patches.suse/0362-drm-i915-display-Compare-the-readout-dsc-pps-params.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
