drm/i915/tc: remove "fia" from intel_tc_port_fia_max_lane_count() (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13373,6 +13373,7 @@
 	patches.suse/0363-drm-i915-tc-rename-mtl_tc_port_get_pin_assignment_ma.patch
 	patches.suse/0364-drm-i915-tc-make-intel_tc_port_get_lane_mask-static.patch
 	patches.suse/0365-drm-i915-tc-move-legacy-code-out-of-the-main-_max_la.patch
+	patches.suse/0366-drm-i915-tc-remove-fia-from-intel_tc_port_fia_max_la.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
