drm/i915: Constify LUT entries in checker (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13377,6 +13377,7 @@
 	patches.suse/0367-drm-i915-psr-Add-psr-sink-error-status-into-sink-sta.patch
 	patches.suse/0368-drm-i915-add-trailing-newlines-to-msgs.patch
 	patches.suse/0369-drm-i915-cx0-Check-and-increase-msgbus-timeout-thres.patch
+	patches.suse/0370-drm-i915-Constify-LUT-entries-in-checker.patch
 	patches.suse/drm-i915-Fix-FEC-state-dump.patch
 	patches.suse/drm-i915-Introduce-crtc_state-enhanced_framing.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
