drm/i915: Adjust seamless_m_n flag behaviour (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13428,6 +13428,7 @@
 	patches.suse/0418-drm-i915-Change-intel_pipe_update_-start-end-calling.patch
 	patches.suse/0419-drm-i915-Extract-intel_crtc_vblank_evade_scanlines.patch
 	patches.suse/0420-drm-i915-Enable-VRR-later-during-fastsets.patch
+	patches.suse/0421-drm-i915-Adjust-seamless_m_n-flag-behaviour.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
