drm/i915/lnl: Add CDCLK table (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13456,6 +13456,7 @@
 	patches.suse/0446-drm-i915-xe2lpd-Add-support-for-HPD.patch
 	patches.suse/0447-drm-i915-xe2lpd-Extend-Wa_15010685871.patch
 	patches.suse/0448-drm-i915-lnl-Add-gmbus-ddc-support.patch
+	patches.suse/0449-drm-i915-lnl-Add-CDCLK-table.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
